examples/errors/runtime/error4.tab

s = "Some template string with undefined expression #{ nope() }"
print(s)
